优化定位功能